fix: fixes cors configuration