@@ -1,5 +1,6 @@
 package com.project_x.core.security;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,25 +8,46 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 public class CorsConfig {
+
+    @Value("${app.cors.allowed-origins:*}")
+    private String allowedOrigins;
+
+    @Value("${app.cors.allow-credentials:false}")
+    private boolean allowCredentials;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration configuration = new CorsConfiguration();
 
         // Allow all origins for development
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+        String raw = (allowedOrigins == null || allowedOrigins.isBlank())
+                ? "*"
+                : allowedOrigins.trim();
+
+        // Support "*" or comma-separated list
+        if ("*".equals(raw)) {
+            configuration.setAllowedOriginPatterns(List.of("*")); // better than setAllowedOrigins("*")
+        } else {
+            List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isBlank())
+                    .collect(Collectors.toList());
+            configuration.setAllowedOrigins(origins);
+        }
 
         // Allow common HTTP methods
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 
         // Allow all headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
 
         // No credentials for wildcard origins
-        configuration.setAllowCredentials(false);
+        configuration.setAllowCredentials(allowCredentials);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
